--- a/feature/home/src/main/res/layout/rv_item_card.xml
+++ b/feature/home/src/main/res/layout/rv_item_card.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_gravity="center"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/small"
     android:clickable="true"
-    android:layout_marginVertical="@dimen/medium"
+    android:foreground="?attr/selectableItemBackgroundBorderless"
     app:cardCornerRadius="@dimen/medium_plus"
     app:cardElevation="@dimen/small">
 
 
     <View
-        android:layout_width="106dp"
+        android:layout_width="122dp"
         android:layout_height="54dp"
         android:layout_gravity="bottom"
         android:background="@drawable/view_bg" />
@@ -26,19 +26,19 @@
         <TextView
             android:id="@+id/tv_pokemon_no"
             style="@style/Pokedex.BodySmall"
-            android:layout_marginEnd="@dimen/small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginTop="@dimen/small"
+            android:layout_marginEnd="@dimen/small"
             tools:text="#0001" />
 
         <ImageView
             android:id="@+id/iv_pokemon"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginHorizontal="@dimen/medium"
             android:layout_gravity="center"
+            android:layout_marginHorizontal="@dimen/medium_plus"
             tools:src="@drawable/bulbasaur" />
 
         <TextView
@@ -46,10 +46,10 @@
             style="@style/Pokedex.BodyMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="@dimen/medium"
             android:ellipsize="end"
             android:maxLines="1"
-            android:layout_marginHorizontal="@dimen/medium"
-            android:layout_gravity="center"
             android:textStyle="bold"
             tools:text="Bulbasaur" />
 
