--- a/feature/details/src/main/res/layout/fragment_details.xml
+++ b/feature/details/src/main/res/layout/fragment_details.xml
@@ -1,15 +1,302 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="?android:windowTitleSize"
+    tools:background="@color/fire"
     tools:context=".DetailsFragment">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        tools:backgroundTint="@color/fire">
 
-    <TextView
-        android:gravity="center"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_navigation"
+                style="@style/Widget.Material3.Button.IconButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:icon="@drawable/navigation_icon"
+                app:iconTint="@color/white" />
+
+            <TextView
+                android:id="@+id/tv_title"
+                style="@style/Pokedex.TitleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                tools:text="Charmender" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/tv_id"
+                style="@style/Pokedex.BodySmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/medium_plus"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                tools:text="#0001" />
+
+        </LinearLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <ImageView
+        android:id="@+id/iv_pokeball"
+        android:layout_width="240dp"
+        android:layout_height="250dp"
+        android:layout_gravity="end"
+        android:layout_margin="@dimen/small"
+        android:alpha="0.2"
+        android:src="@drawable/pokeball" />
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="SETTINGS" />
+        android:layout_marginHorizontal="@dimen/small"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="@dimen/small"
+        app:cardCornerRadius="@dimen/medium_plus"
+        app:cardElevation="0dp">
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/chip_container"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginTop="@dimen/page_medium"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_about"
+                style="@style/Pokedex.TitleMedium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/medium"
+                android:text="@string/about"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@id/chip_container"
+                app:layout_constraintStart_toStartOf="@id/chip_container"
+                app:layout_constraintTop_toBottomOf="@id/chip_container"
+                tools:textColor="@color/fire" />
+
+
+            <LinearLayout
+                android:id="@+id/pokemon_info_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_about">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:padding="@dimen/medium">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/iv_weight_logo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/weight" />
+
+                        <TextView
+                            android:id="@+id/tv_weight"
+                            style="@style/Pokedex.BodyMedium"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/medium"
+                            android:textStyle="bold"
+                            tools:text="6,9 kg" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tv_weight_desc"
+                        style="@style/Pokedex.BodySmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/medium_plus"
+                        android:text="@string/weight" />
+
+                </LinearLayout>
+
+                <View
+                    android:id="@+id/divider_first"
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="@dimen/medium_plus"
+                    android:background="@color/light_gray" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="@dimen/medium">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/iv_height_logo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/height" />
+
+                        <TextView
+                            android:id="@+id/tv_height"
+                            style="@style/Pokedex.BodyMedium"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/medium"
+                            android:textStyle="bold"
+                            tools:text="0,7 m" />
+                    </LinearLayout>
+
+
+                    <TextView
+                        android:id="@+id/tv_height_desc"
+                        style="@style/Pokedex.BodySmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="bottom"
+                        android:layout_marginTop="@dimen/medium_plus"
+                        android:text="@string/height"
+                        app:layout_constraintEnd_toEndOf="@id/tv_height"
+                        app:layout_constraintStart_toStartOf="@id/iv_height_logo"
+                        app:layout_constraintTop_toBottomOf="@id/iv_height_logo" />
+
+                </LinearLayout>
+
+                <View
+                    android:id="@+id/divider_second"
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="@dimen/medium_plus"
+                    android:background="@color/light_gray" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="@dimen/medium">
+
+                    <TextView
+                        android:id="@+id/tv_moves"
+                        style="@style/Pokedex.BodyMedium"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        tools:text="Chlorophyll \n Overgrow" />
+
+                    <TextView
+                        android:id="@+id/tv_moves_desc"
+                        style="@style/Pokedex.BodySmall"
+                        android:gravity="bottom"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/small"
+                        android:text="@string/moves" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_info"
+                style="@style/Pokedex.BodySmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/medium_plus"
+                android:layout_marginVertical="@dimen/large"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/pokemon_info_container"
+                tools:text="There is a plant seed on its back right from the day this Pokémon is born. The seed slowly grows larger." />
+
+            <TextView
+                android:id="@+id/tv_base_stats"
+                style="@style/Pokedex.TitleMedium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/large"
+                android:text="@string/base_stats"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_info"
+                tools:textColor="@color/fire" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_stats"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/large"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_base_stats"
+                tools:listitem="@layout/layout_stat" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:id="@+id/iv_pokemon"
+        android:layout_width="match_parent"
+        android:layout_height="260dp"
+        android:paddingBottom="@dimen/page_small"
+        app:layout_anchor="@id/card_view"
+        app:layout_anchorGravity="center|top"
+        tools:src="@drawable/charmender" />
+
+    <include
+        android:id="@+id/layout_loading"
+        layout="@layout/layout_loading" />
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
