--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,32 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="135"
+    android:viewportHeight="141">
+  <group android:scaleX="0.8329787"
+      android:scaleY="0.87"
+      android:translateX="11.273936"
+      android:translateY="9.165">
+    <group>
+      <clip-path
+          android:pathData="M0,0h135v141h-135z"/>
+
+      <path
+          android:pathData="M60.16,22C87.91,21.95 105.41,35.28 112.66,62C114.58,90.73 101.75,108.89 74.16,116.5C53.72,119.69 37.56,112.86 25.66,96C11.87,69.64 16.7,47.47 40.16,29.5C46.42,25.52 53.09,23.02 60.16,22Z"
+          android:fillColor="#EC6565"
+          android:fillType="evenOdd"/>
+      <path
+          android:pathData="M57.97,32.06C59.99,31.9 61.99,32.06 63.97,32.56C65.02,33.95 65.19,35.45 64.47,37.06C49.84,39.69 40.17,48.03 35.47,62.06C34.08,63.11 32.58,63.28 30.97,62.56C29.87,60.5 29.71,58.33 30.47,56.06C35.96,43.75 45.13,35.75 57.97,32.06Z"
+          android:fillColor="#FBF6F6"
+          android:fillType="evenOdd"/>
+      <path
+          android:pathData="M61.86,60.04C71.86,59.54 76.03,64.2 74.36,74.04C70.83,79.72 65.99,81.22 59.86,78.54C52.77,71.48 53.44,65.31 61.86,60.04Z"
+          android:fillColor="#FBF8F8"
+          android:fillType="evenOdd"/>
+      <path
+          android:pathData="M27.94,76.06C34.28,75.9 40.62,76.06 46.94,76.56C53.85,90.31 63.85,93.31 76.94,85.56C79.27,82.56 81.61,79.56 83.94,76.56C89.94,75.9 95.94,75.9 101.94,76.56C103.33,77.52 104,78.85 103.94,80.56C96.09,104 79.75,114 54.94,110.56C41.51,106.13 32.34,97.3 27.44,84.06C26.72,81.3 26.88,78.64 27.94,76.06Z"
+          android:fillColor="#FBFAFA"
+          android:fillType="evenOdd"/>
+    </group>
+  </group>
 </vector>
