--- a/feature/details/src/main/res/layout/layout_loading.xml
+++ b/feature/details/src/main/res/layout/layout_loading.xml
@@ -8,6 +8,7 @@
 
     <ProgressBar
         android:layout_width="wrap_content"
+        android:indeterminateTint="@color/md_theme_light_primary"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
