--- a/feature/details/src/main/res/layout/fragment_details.xml
+++ b/feature/details/src/main/res/layout/fragment_details.xml
@@ -86,7 +86,7 @@
                 android:id="@+id/chip_container"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
-                android:layout_marginTop="@dimen/page_medium"
+                android:layout_marginTop="80dp"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
